--- a/nginx-controller/helmrelease-nginx-ingress-controller.yaml
+++ b/nginx-controller/helmrelease-nginx-ingress-controller.yaml
@@ -15,10 +15,10 @@ spec:
   interval: 15m
   timeout: 5m
   releaseName: nginx-ingress-controller
-  values: |
-      type: NodePort
-      nodePorts:
-        http: 32080
-        https: 32443
-        tcp:
-          8080: 32808
+  values:
+    controller:
+      service:
+        type: NodePort
+        nodePorts:
+          http: 32080
+          https: 32443
