pushing annotations and hosts

--- a/infrastructure/prometheus/helmrelease-prometheus.yaml
+++ b/infrastructure/prometheus/helmrelease-prometheus.yaml
@@ -19,3 +19,9 @@ spec:
     server:
       ingress:
         enabled: true
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          kubernetes.io/tls-acme: 'true'
+        hosts:
+          - prometheus.domain.com
+          - domain.com/prometheus
