--- a/infrastructure/prometheus/helmrelease-prometheus.yaml
+++ b/infrastructure/prometheus/helmrelease-prometheus.yaml
@@ -25,3 +25,5 @@ spec:
         hosts:
           - prometheus.domain.com
           - domain.com/prometheus
+      service:
+        servicePort: 9090
