--- a/infrastructure/grafana/helmrelease-grafana.yaml
+++ b/infrastructure/grafana/helmrelease-grafana.yaml
@@ -24,4 +24,5 @@ spec:
           kubernetes.io/ingress.class: nginx
           kubernetes.io/tls-acme: 'true'
         hosts:
-          - grafana.domain.com
+          - prometheus.domain.com
+        path: /grafana
