get the grafana.domain.com back

--- a/infrastructure/grafana/helmrelease-grafana.yaml
+++ b/infrastructure/grafana/helmrelease-grafana.yaml
@@ -24,5 +24,4 @@ spec:
           kubernetes.io/ingress.class: nginx
           kubernetes.io/tls-acme: 'true'
         hosts:
-          - prometheus.domain.com
-        path: /grafana
+          - grafana.domain.com
