--- a/infrastructure/grafana/helmrelease-grafana.yaml
+++ b/infrastructure/grafana/helmrelease-grafana.yaml
@@ -23,7 +23,8 @@ spec:
         kubernetes.io/ingress.class: nginx
         kubernetes.io/tls-acme: 'true'
       hosts:
-        - grafana.domain.com
+        - prometheus.domain.com
+      path: /grafana
     admin:
       existingSecret: ""
       userKey: admin-user
