--- a/infrastructure/prometheus/helmrelease-prometheus.yaml
+++ b/infrastructure/prometheus/helmrelease-prometheus.yaml
@@ -19,6 +19,7 @@ spec:
     server:
       ingress:
         enabled: true
+        ingressClassName: nginx
         annotations:
           kubernetes.io/ingress.class: nginx
           kubernetes.io/tls-acme: 'true'
