--- a/infrastructure/promtail/helmrelease-grafana.yaml
+++ b/infrastructure/promtail/helmrelease-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: promtail
-  namespace: promtail
+  namespace: loki
 spec:
   chart:
     spec:
@@ -10,7 +10,7 @@ spec:
       version: 6.15.3
       sourceRef:
         kind: HelmRepository
-        name: promtail
+        name: loki
         namespace: flux-system
   interval: 15m
   timeout: 5m
