--- a/infrastructure/grafana/helmrelease-grafana.yaml
+++ b/infrastructure/grafana/helmrelease-grafana.yaml
@@ -15,6 +15,7 @@ spec:
   interval: 15m
   timeout: 5m
   releaseName: grafana
+  createNamespace: true
   values:
     ingress:
       enabled: true
