--- a/infrastructure/loki/helmrelease-grafana.yaml
+++ b/infrastructure/loki/helmrelease-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: loki
-  namespace: loki
+  namespace: monitoring
 spec:
   chart:
     spec:
@@ -15,6 +15,7 @@ spec:
   interval: 15m
   timeout: 5m
   releaseName: loki
+  createNamespace: true
   values:
     loki: 
       auth_enabled: false
