--- a/infrastructure/prometheus/helmrelease-prometheus.yaml
+++ b/infrastructure/prometheus/helmrelease-prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: prometheus
-  namespace: prometheus
+  namespace: monitoring
 spec:
   chart:
     spec:
@@ -15,6 +15,7 @@ spec:
   interval: 15m
   timeout: 5m
   releaseName: prometheus
+  createNamespace: true
   values:
     server:
       ingress:
