--- a/infrastructure/promtail/helmrelease-promtail.yaml
+++ b/infrastructure/promtail/helmrelease-promtail.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: promtail
-  namespace: loki
+  namespace: monitoring
 spec:
   chart:
     spec:
@@ -15,3 +15,4 @@ spec:
   interval: 15m
   timeout: 5m
   releaseName: promtail
+  createNamespace: true
