--- a/infrastructure/grafana/helmrelease-grafana.yaml
+++ b/infrastructure/grafana/helmrelease-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: grafana
-  namespace: grafana
+  namespace: monitoring
 spec:
   chart:
     spec:
@@ -15,7 +15,6 @@ spec:
   interval: 15m
   timeout: 5m
   releaseName: grafana
-  createNamespace: true
   values:
     ingress:
       enabled: true
